# blfsbookja-src

./: .gitignore  .gitmodules  Makefile.am  Makefile.in  configure  configure.ac  version.ac
src/appendices/: Makefile.am  Makefile.in  creat-comm.ch  glossary.ch  mit-lic.ch
src/archive/deprecated/: Makefile.am
src/archive/kde/: Makefile.am
src/book/: Makefile.am  Makefile.in  bookinfo.ch  dedication.ch  errata.ch  foreword.ch  japanese.ch  organization.ch  preface.ch  whoread.ch
src/general/: Makefile.am  Makefile.in  general.ch
src/general/genlib/: Makefile.am  Makefile.in  abseil-cpp.ch  appstream-glib.ch  appstream.ch  apr-util.ch  apr.ch  aspell.ch  boost.ch  brotli.ch  clucene.ch  dbus-glib.ch  double-conversion.ch  duktape.ch  enchant.ch  exempi.ch  fftw.ch  fmt.ch  genlib.ch  glib2.ch  glibmm.ch  glibmm2.ch  gmime.ch  gmime3.ch  gobject-introspection.ch  grantlee.ch  gsl.ch  gspell.ch  highway.ch  icu.ch  inih.ch  intel-gmmlib.ch  jansson.ch  js.ch  js38.ch  js52.ch  js60.ch  js68.ch  js78.ch  json-c.ch  (+89 more)
src/general/genutils/: Makefile.am  Makefile.in  asciidoc.ch  asciidoctor.ch  bogofilter.ch  compface.ch  desktop-file-utils.ch  dos2unix.ch  genutils.ch  graphviz.ch  gtk-doc.ch  hd2u.ch  highlight.ch  ibus.ch  imagemagick.ch  iso-codes.ch  lsof.ch  mandoc.ch  pinentry.ch  rarian.ch  rep-gtk.ch  screen.ch  shared-mime-info.ch  sharutils.ch  telepathy-logger.ch  tidy-html5.ch  time.ch  xdg-dbus-proxy.ch  xdg-user-dirs.ch
src/general/graphlib/: Makefile.am  Makefile.in  aalib.ch  babl.ch  exiv2.ch  fontconfig.ch  freetype2.ch  fribidi.ch  gegl.ch  giflib.ch  glad.ch  glm.ch  graphite2.ch  graphlib.ch  harfbuzz.ch  jasper.ch  lcms.ch  lcms2.ch  libavif.ch  libexif.ch  libgxps.ch  libjpeg-turbo.ch  libjxl.ch  libmng.ch  libmypaint.ch  libpng.ch  libraw.ch  librsvg.ch  libspiro.ch  libtiff.ch  libwebp.ch  mypaint-brushes.ch  newt.ch  opencv.ch  openjpeg2.ch  pixman.ch  poppler.ch  potrace.ch  qpdf.ch  qrencode.ch  (+3 more)
src/general/prog/: Makefile.am  Makefile.in  apache-ant.ch  asciidoc.ch  beaker.ch  cbindgen.ch  check.ch  clisp.ch  cmake.ch  dbus-python.ch  decorator.ch  doxygen.ch  dtc.ch  dummy-java.ch  elfutils.ch  gc.ch  gcc.ch  gdb.ch  git.ch  gitserver.ch  guile.ch  java.ch  junit.ch  librep.ch  llvm.ch  lua.ch  lua52.ch  lxml.ch  mako.ch  mercurial.ch  nasm.ch  ojdk-conf.ch  openjdk.ch  other-tools.ch  patchelf.ch  perl-alternatives.ch  perl-deps.ch  perl-modules.ch  php.ch  prog.ch  (+29 more)
src/general/sysutils/: Makefile.am  Makefile.in  accountsservice.ch  acpid.ch  at.ch  autofs-kernel.ch  autofs-optional-kernel.ch  autofs.ch  blocaled.ch  bluez.ch  bubblewrap.ch  colord.ch  cpio.ch  cups-pk-helper.ch  dbus.ch  elogind.ch  fcron.ch  gpm.ch  hdparm.ch  hwdata.ch  lm_sensors.ch  logrotate.ch  lsb-tools.ch  mc.ch  modemmanager.ch  notification-daemon.ch  p7zip.ch  pax.ch  pciutils.ch  pm-utils.ch  power-profiles-daemon.ch  raptor.ch  rasqal.ch  redland.ch  sg3_utils.ch  sysmon-qt.ch  sysstat.ch  systemd.ch  sysutils.ch  udisks.ch  (+8 more)
src/gnome/applications/: Makefile.am  Makefile.in  applications.ch  baobab.ch  brasero.ch  cheese.ch  dummy-apps.ch  eog.ch  evince.ch  evolution.ch  file-roller.ch  gnome-calculator.ch  gnome-color-manager.ch  gnome-connections.ch  gnome-disk-utility.ch  gnome-logs.ch  gnome-maps.ch  gnome-nettool.ch  gnome-power-manager.ch  gnome-screenshot.ch  gnome-system-monitor.ch  gnome-terminal.ch  gnome-tweaks.ch  gnome-weather.ch  gucharmap.ch  seahorse.ch  snapshot.ch  vinagre.ch  vino.ch
src/gnome/platform/: Makefile.am  Makefile.in  accountsservice.ch  dconf.ch  dummy-desktop.ch  dummy-platform.ch  evolution-data-server.ch  folks.ch  gconf.ch  gcr.ch  gcr4.ch  gdm.ch  geocode-glib.ch  gexiv2.ch  gjs.ch  gnome-autoar.ch  gnome-backgrounds.ch  gnome-bluetooth.ch  gnome-control-center.ch  gnome-desktop.ch  gnome-keyring.ch  gnome-menus.ch  gnome-online-accounts.ch  gnome-session.ch  gnome-settings-daemon.ch  gnome-shell-extensions.ch  gnome-shell.ch  gnome-tweaks.ch  gnome-user-docs.ch  gnome-video-effects.ch  grilo.ch  gsettings-desktop-schemas.ch  gsound.ch  gtkhtml.ch  gvfs.ch  libgdata.ch  libgee.ch  libgtop.ch  libgweather.ch  libpeas.ch  (+19 more)
src/introduction/important/: Makefile.am  Makefile.in  beyond.ch  bootscripts.ch  building-notes.ch  important.ch  la-files.ch  libraries.ch  locale-issues.ch  patches.ch  pkgmgt.ch  position.ch  systemd-units.ch
src/introduction/welcome/: Makefile.am  Makefile.in  acknowledgments.ch  askhelp.ch  changelog.ch  contact.ch  conventions.ch  credits.ch  maillists.ch  mirrors.ch  newsserver.ch  packages.ch  version.ch  welcome.ch  (+2 more)
src/kde/: Makefile.am  Makefile.in  extra-cmake-modules.ch  introduction.ch  kde-intro.ch  kde.ch  kuserfeedback.ch  libdbusmenuqt.ch  phonon-backend-gstreamer.ch  phonon-backend-vlc.ch  phonon.ch  plasma-wayland-protocols.ch  polkit-qt.ch
src/kernel-config/: Makefile.am  Makefile.in
src/lxde/: Makefile.am  Makefile.in
src/lxqt/: Makefile.am  Makefile.in  lxqt.ch
src/networking/: Makefile.am  Makefile.in  networking.ch
src/postlfs/: Makefile.am  Makefile.in  postlfs.ch
src/pst/: Makefile.am  Makefile.in  pst.ch
src/server/: Makefile.am  Makefile.in  server.ch
src/stylesheets/: Makefile.am  Makefile.in
src/template/: Makefile.am  Makefile.in
src/xincludes/: Makefile.am  Makefile.in  SIOCGSTAMP.ch  X11R6_symlink.ch  cmake-skip-install-rpath.ch  gnome-mandir.ch  gnome-old-prefix.ch  gnome-old-sysconfdir.ch  gnome-prefix.ch  gnome-sysconfdir.ch  gnome2.ch  gsettings-destdir.ch  gst10-objc-error.ch  gst10-plugins.ch  gtk-doc-rebuild-problem.ch  gtk-doc-rebuild.ch  gtk-update-icon-cache.ch  lib-config.ch  meson-buildtype-release.ch  meson-wrap-nodownload.ch  meson-wrap-nofallback.ch  mozconfigure.ch  mozmach.ch  mozshm.ch  perl-build-install.ch  perl-standard-install.ch  perl-unsafe-install.ch  pip3-cmd-explain.ch  rm-la-file-referring-icu.ch  scrollkeeper-dir.ch  static-libraries.ch  tex-lib.ch  tex-prefix.ch  tex-shared.ch  tex-system.ch  tex-xpdf.ch  texoptional.ch  texprogs.ch  texrecommendlibs.ch  texruntime.ch  (+5 more)
src/xsoft/: Makefile.am  Makefile.in  xsoft.ch
(+1013 files in other folders)
