##
## This is part of BLFSbookja package.
##
SUBDIRS=kf5 kf5-apps plasma5

CHANGE_FILES = \
	extra-cmake-modules.ch      \
	introduction.ch             \
	kde.ch                      \
	kde-intro.ch                \
	phonon.ch                   \
	phonon-backend-vlc.ch       \
	plasma-wayland-protocols.ch \
	polkit-qt.ch

include $(top_srcdir)/build-aux/main.mk
