##
## This is part of BLFSbookja package.
##

CHANGE_FILES = \
	gnome-mandir.ch             \
	gnome-prefix.ch             \
	gnome-sysconfdir.ch         \
	gnome2.ch                   \
	gnome-old-sysconfdir.ch     \
	gnome-old-prefix.ch         \
	gsettings-destdir.ch        \
	gst10-objc-error.ch         \
	gst10-plugins.ch            \
	gtk-doc-rebuild.ch          \
	gtk-doc-rebuild-problem.ch  \
	gtk-update-icon-cache.ch    \
	lib-config.ch               \
	meson-buildtype-release.ch  \
	meson-wrap-nodownload.ch    \
	meson-wrap-nofallback.ch    \
	mozshm.ch                   \
	perl-build-install.ch       \
	perl-standard-install.ch    \
	perl-unsafe-install.ch      \
	pip3-cmd-explain.ch         \
	rm-la-file-referring-icu.ch \
	scrollkeeper-dir.ch         \
	SIOCGSTAMP.ch               \
	static-libraries.ch         \
	texrecommendlibs.ch         \
	texoptional.ch              \
	texruntime.ch               \
	tex-prefix.ch               \
	tex-lib.ch                  \
	tex-shared.ch               \
	tex-system.ch               \
	tex-xpdf.ch                 \
	texprogs.ch                 \
	update-desktop-database.ch  \
	update-icons-and-desktop.ch \
	use-unzip.ch                \
	without-gnome.ch            \
	without-scrollkeeper.ch     \
	X11R6_symlink.ch

include $(top_srcdir)/build-aux/main.mk
