##
## This is part of BLFSbookja package.
##

CHANGE_FILES = \
	appstream.ch             \
	apr.ch                   \
	apr-util.ch              \
	aspell.ch                \
	boost.ch                 \
	brotli.ch                \
	clucene.ch               \
	dbus-glib.ch             \
	double-conversion.ch     \
	enchant.ch               \
	duktape.ch               \
	exempi.ch                \
	fftw.ch                  \
	fmt.ch                   \
	genlib.ch                \
	glib2.ch                 \
	glibmm.ch                \
	gmime3.ch                \
	gsl.ch                   \
	gspell.ch                \
	icu.ch                   \
	inih.ch                  \
	intel-gmmlib.ch          \
	jansson.ch               \
	json-c.ch                \
	json-glib.ch             \
	keyutils.ch              \
	keyutils-test-kernel.ch  \
	libaio.ch                \
	libarchive.ch            \
	libassuan.ch             \
	libatasmart.ch           \
	libatomic_ops.ch         \
	libblockdev.ch           \
	libbytesize.ch           \
	libcloudproviders.ch     \
	libdaemon.ch             \
	libgcrypt.ch             \
	libgpg-error.ch          \
	libgrss.ch               \
	libgsf.ch                \
	libgudev.ch              \
	libgusb.ch               \
	libical.ch               \
	libidn.ch                \
	libidn2.ch               \
	libiodbc.ch              \
	libksba.ch               \
	liblinear.ch             \
	libmbim.ch               \
	libnvme.ch               \
	libpaper.ch              \
	libportal.ch             \
	libptytty.ch             \
	libqalculate.ch          \
	libqmi.ch                \
	libseccomp.ch            \
	libsigc++.ch             \
	libsigsegv.ch            \
	libssh2.ch               \
	libstatgrab.ch           \
	libtasn1.ch              \
	libunistring.ch          \
	libunwind.ch             \
	liburcu.ch               \
	libusb.ch                \
	libusb-kernel.ch         \
	libuv.ch                 \
	libwacom.ch              \
	libwpe.ch                \
	libxkbcommon.ch          \
	libxml2.ch               \
	libxmlb.ch               \
	libxslt.ch               \
	libyaml.ch               \
	log4cplus.ch             \
	lzo.ch                   \
	mtdev.ch                 \
	nodejs.ch                \
	npth.ch                  \
	nspr.ch                  \
	pcre2.ch                 \
	popt.ch                  \
	qca.ch                   \
	spidermonkey.ch          \
	spirv-headers.ch         \
	spirv-tools.ch           \
	talloc.ch                \
	telepathy-glib.ch        \
	uchardet.ch              \
	umockdev.ch              \
	utfcpp.ch                \
	wayland.ch               \
	wayland-protocols.ch     \
	wpebackend-fdo.ch        \
	wv.ch                    \
	xapian.ch

include $(top_srcdir)/build-aux/main.mk
