##
## This is part of BLFSbookja package.
##

CHANGE_FILES = \
	asciidoctor.ch        \
	bogofilter.ch         \
	compface.ch           \
	desktop-file-utils.ch \
	dos2unix.ch           \
	genutils.ch           \
	graphviz.ch           \
	gtk-doc.ch            \
	highlight.ch          \
	ibus.ch               \
	imagemagick.ch        \
        iso-codes.ch          \
        lsof.ch               \
	lsof-test-kernel.ch   \
	mandoc.ch             \
	pinentry.ch           \
	screen.ch             \
        shared-mime-info.ch   \
	sharutils.ch          \
	tidy-html5.ch         \
	time.ch               \
	telepathy-mission-control.ch \
        tree.ch               \
	unixodbc.ch           \
	xdg-dbus-proxy.ch     \
	xdg-user-dirs.ch

include $(top_srcdir)/build-aux/main.mk
