##
## This is part of BLFSbookja package.
##

CHANGE_FILES = \
	aalib.ch              \
	babl.ch               \
	exiv2.ch              \
	fontconfig.ch         \
	freetype2.ch          \
	fribidi.ch            \
	gegl.ch               \
	giflib.ch             \
	glad.ch               \
	glm.ch                \
	graphite2.ch          \
	graphlib.ch           \
	harfbuzz.ch           \
	jasper.ch             \
	lcms2.ch              \
	libavif.ch            \
	libexif.ch            \
	libgxps.ch            \
	libjpeg-turbo.ch      \
	libmng.ch             \
	libmypaint.ch         \
	libpng.ch             \
	libraw.ch             \
	librsvg.ch            \
	libspiro.ch           \
	libtiff.ch            \
	libwebp.ch            \
	mypaint-brushes.ch    \
	newt.ch               \
	opencv.ch             \
	openjpeg2.ch          \
	pixman.ch             \
	poppler.ch            \
	potrace.ch            \
	qpdf.ch               \
	qrencode.ch           \
	sassc.ch              \
	webp-pixbuf-loader.ch \
	woff2.ch

include $(top_srcdir)/build-aux/main.mk
