##
## This is part of BLFSbookja package.
##
SUBDIRS = perl-deps perl-modules python-dependencies python-modules

CHANGE_FILES = \
	apache-ant.ch          \
	cbindgen.ch            \
	clisp.ch               \
	cmake.ch               \
	doxygen.ch             \
	dtc.ch                 \
	dummy-java.ch          \
	gc.ch                  \
	gcc.ch                 \
	gdb.ch                 \
	git.ch                 \
	gitserver.ch           \
	guile.ch               \
	java.ch                \
	llvm.ch                \
	lua.ch                 \
	lua52.ch               \
	mercurial.ch           \
	nasm.ch                \
	ojdk-conf.ch           \
	openjdk.ch             \
	patchelf.ch            \
	perl-alternatives.ch   \
	perl-deps.ch           \
	perl-modules.ch        \
	php.ch                 \
	prog.ch                \
	python-dependencies.ch \
	python-modules.ch      \
	python2.ch             \
	python3.ch             \
	python311.ch           \
	ruby.ch                \
	rust.ch                \
	rust-bindgen.ch        \
	scons.ch               \
	slang.ch               \
	subversion.ch          \
	svnserver.ch           \
	swig.ch                \
	tk.ch                  \
	unifdef.ch             \
	vala.ch                \
	valgrind.ch            \
	yasm.ch

include $(top_srcdir)/build-aux/main.mk
